--- a/Resources/Private/Language/ContentElements/Static/locallang_heroImage.xlf
+++ b/Resources/Private/Language/ContentElements/Static/locallang_heroImage.xlf
@@ -10,68 +10,27 @@
 				<source>Image, header, subheader, text and link</source>
 			</trans-unit>
 
-			<trans-unit id="heroImage.flexform.linkAsBtn" resname="heroImage.flexform.linkAsBtn">
-				<source>Show link as a button</source>
+			<trans-unit id="heroImage.flexform.height" resname="heroImage.flexform.height">
+				<source>Hero Image height (400px by default)</source>
 			</trans-unit>
-			<trans-unit id="heroImage.flexform.transparentLayer" resname="heroImage.flexform.transparentLayer">
-				<source>Element overlay color with opacity</source>
+
+			<trans-unit id="heroImage.flexform.overlay" resname="heroImage.flexform.overlay">
+				<source>Overlay color with opacity</source>
 			</trans-unit>
-			<trans-unit id="heroImage.flexform.horizontalAlignment" resname="heroImage.flexform.horizontalAlignment">
-			<source>Horizontal alignment</source>
+			<trans-unit id="heroImage.flexform.overlay_disable" resname="heroImage.flexform.overlay_disable">
+				<source>No overlay</source>
 			</trans-unit>
-			<trans-unit id="heroImage.flexform.verticalAlignment" resname="heroImage.flexform.verticalAlignment">
-				<source>Vertical alignment</source>
+			<trans-unit id="heroImage.flexform.overlay_primary" resname="heroImage.flexform.overlay_primary">
+				<source>Primary color overlay</source>
 			</trans-unit>
-			<trans-unit id="heroImage.flexform.horizontalAlignment_left" resname="heroImage.flexform.horizontalAlignment_left">
-				<source>Left align</source>
+			<trans-unit id="heroImage.flexform.overlay_secondary" resname="heroImage.flexform.overlay_secondary">
+				<source>Secondary color overlay</source>
 			</trans-unit>
-			<trans-unit id="heroImage.flexform.horizontalAlignment_center" resname="heroImage.flexform.horizontalAlignment_center">
-				<source>Center align</source>
+			<trans-unit id="heroImage.flexform.overlay_dark" resname="heroImage.flexform.overlay_dark">
+				<source>Dark overlay</source>
 			</trans-unit>
-			<trans-unit id="heroImage.flexform.horizontalAlignment_right" resname="heroImage.flexform.horizontalAlignment_right">
-				<source>Right align</source>
-			</trans-unit>
-			<trans-unit id="heroImage.flexform.verticalAlignment_top" resname="heroImage.flexform.verticalAlignment_top">
-				<source>Top</source>
-			</trans-unit>
-			<trans-unit id="heroImage.flexform.verticalAlignment_middle" resname="heroImage.flexform.verticalAlignment_middle">
-				<source>Middle</source>
-			</trans-unit>
-			<trans-unit id="heroImage.flexform.verticalAlignment_bottom" resname="heroImage.flexform.verticalAlignment_bottom">
-				<source>Bottom</source>
-			</trans-unit>
-			<trans-unit id="heroImage.flexform.animationStyle" resname="heroImage.flexform.animationStyle">
-				<source>Set animation style</source>
-			</trans-unit>
-			<trans-unit id="heroImage.flexform.animationStyle_disable" resname="heroImage.flexform.animationStyle_disable">
-				<source>Disable</source>
-			</trans-unit>
-			<trans-unit id="heroImage.flexform.animationStyle_1" resname="heroImage.flexform.animationStyle_1">
-				<source>Fade in down</source>
-			</trans-unit>
-			<trans-unit id="heroImage.flexform.animationStyle_2" resname="heroImage.flexform.animationStyle_2">
-				<source>Fade in</source>
-			</trans-unit>
-			<trans-unit id="heroImage.flexform.animationStyle_3" resname="heroImage.flexform.animationStyle_3">
-				<source>Fade in up</source>
-			</trans-unit>
-			<trans-unit id="heroImage.flexform.animationStyle_4" resname="heroImage.flexform.animationStyle_4">
-				<source>Fade from up and down, style 1</source>
-			</trans-unit>
-			<trans-unit id="heroImage.flexform.animationStyle_5" resname="heroImage.flexform.animationStyle_5">
-				<source>Fade from up and down, style 2</source>
-			</trans-unit>
-			<trans-unit id="heroImage.flexform.transparentLayer_disable" resname="heroImage.flexform.transparentLayer_disable">
-				<source>Disable</source>
-			</trans-unit>
-			<trans-unit id="heroImage.flexform.transparentLayer_1" resname="heroImage.flexform.transparentLayer_1">
-				<source>Main color</source>
-			</trans-unit>
-			<trans-unit id="heroImage.flexform.transparentLayer_2" resname="heroImage.flexform.transparentLayer_2">
-				<source>Dark</source>
-			</trans-unit>
-			<trans-unit id="heroImage.flexform.transparentLayer_3" resname="heroImage.flexform.transparentLayer_3">
-				<source>Light</source>
+			<trans-unit id="heroImage.flexform.overlay_light" resname="heroImage.flexform.overlay_light">
+				<source>Light overlay</source>
 			</trans-unit>
 		</body>
 	</file>
