--- a/Resources/Private/Language/ContentElements/Static/locallang_bigIconTextLink.xlf
+++ b/Resources/Private/Language/ContentElements/Static/locallang_bigIconTextLink.xlf
@@ -4,10 +4,10 @@
 		<header/>
 		<body>
 			<trans-unit id="bigIconTextLink.title" resname="bigIconTextLink.title">
-				<source>Big icon,Text and Button</source>
+				<source>Big icon,Text and Link</source>
 			</trans-unit>
 			<trans-unit id="bigIconTextLink.description" resname="bigIconTextLink.description">
-				<source>Big icon, header, text and button</source>
+				<source>Big icon, header, text and link</source>
 			</trans-unit>
 
 			<trans-unit id="bigIconTextLink.flexform.stretched_link" resname="bigIconTextLink.flexform.stretched_link">
